feat: add cli with get events
