# docs/swagger.json
@@ -133,7 +133,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "github-action",
+                        "description": "github_action",
                         "name": "source",
                         "in": "query"
                     },
@@ -153,6 +153,12 @@
                         "type": "string",
                         "description": "success",
                         "name": "status",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "events-tracker",
+                        "name": "service",
                         "in": "query"
                     },
                     {
